add comments and update main readme

--- a/clustering/clustering_testing.ipynb
+++ b/clustering/clustering_testing.ipynb
@@ -15,9 +15,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "handmade-convert",
+   "metadata": {},
+   "source": [
+    "One clustering method (DBSCAN) will be tested with the distance definition studied in the folder distance\n",
+    "\n",
+    "To test the method we have the following rectangles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "thermal-victoria",
+   "id": "impaired-customer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fifty-incident",
+   "id": "brazilian-recycling",
    "metadata": {},
    "outputs": [
     {
@@ -63,9 +73,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "continued-onion",
+   "metadata": {},
+   "source": [
+    "This functions are the ones that allow the calculation between rectangles. The function get_distance is the one that returns the distance between two boxes.\n",
+    "\n",
+    "The functions are studies further in the notebook located in the folder distance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "contained-blues",
+   "id": "willing-father",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +154,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "faced-identity",
+   "metadata": {},
+   "source": [
+    "Here is an example of the calculation of the distance between two rectangles. These rectangles are selected with index_1 and index_2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "transsexual-perry",
+   "id": "prepared-racing",
    "metadata": {},
    "outputs": [
     {
@@ -179,9 +207,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "solar-uncle",
+   "metadata": {},
+   "source": [
+    "To run DBSCAN it is necessary to precompute the distance of the rectangles since we are using a custom distance. Then, we run the method and indicate a minimum distance (eps)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ranging-columbia",
+   "id": "coordinated-detroit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "announced-operations",
+   "id": "cathedral-reverse",
    "metadata": {},
    "outputs": [
     {
@@ -219,9 +255,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adverse-sponsorship",
+   "metadata": {},
+   "source": [
+    "The elements of the same group have the same color :)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fantastic-material",
+   "id": "continental-mission",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deluxe-arcade",
+   "id": "divided-summary",
    "metadata": {},
    "outputs": [],
    "source": []
